--- a/Comprar.html
+++ b/Comprar.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="CSS/Comprar.css" />
   </head>
   <body>
-    <h1>Nuestros Productos en Venta</h1>
-
-    <section>
-      <h2>Cajero Automático</h2>
-      <p>Precio: <strong>500</strong></p>
-    </section>
-
-    <button id="Dest"><a href="DESTSOP.html">Volver a la página principal</a></button>
+    <div>
+      <h1>Nuestros Productos en Venta</h1>
+      <button class="btn-dest">
+        <a href="DESTSOP.html">Volver a la página principal</a>
+      </button>
+    </div>
     <script src="JS/Comprar.js"></script>
   </body>
 </html>
