Finalizando primer dia 13/05/2025

--- a/Comprar.html
+++ b/Comprar.html
@@ -7,11 +7,25 @@
     <link rel="stylesheet" href="CSS/Comprar.css" />
   </head>
   <body>
-    <div>
+    <div id="Comprar">
+      <header>
+        <div>
+          <a href="DESTSOP.html"
+            ><img
+              src="img/DEST CODE logo horizontal.jpeg"
+              alt="Principal"
+              class="img-logo"
+          /></a>
+        </div>
+        <nav class="nav-dest">
+          <a href="DESTSOP.html">Principal</a>
+          <a href="Comprar.html">Comprar</a>
+        </nav>
+      </header>
       <h1>Nuestros Productos en Venta</h1>
-      <button class="btn-dest">
-        <a href="DESTSOP.html">Volver a la página principal</a>
-      </button>
+      <a href="DESTSOP.html"
+        ><button class="btn-dest">Volver a la página principal</button></a
+      >
     </div>
     <script src="JS/Comprar.js"></script>
   </body>
