--- a/DESTSOP.html
+++ b/DESTSOP.html
@@ -8,16 +8,27 @@
   </head>
   <body>
     <div id="principal">
-      <nav>
-        <div><img src="" alt=""></div>
-      </nav>
+      <header>
+        <div>
+          <a href="DESTSOP.html"
+            ><img
+              src="img/DEST CODE logo horizontal.jpeg"
+              alt="Principal"
+              class="img-logo"
+          /></a>
+        </div>
+        <nav class="nav-dest">
+          <a href="DESTSOP.html">Principal</a>
+          <a href="Comprar.html">Comprar</a>
+        </nav>
+      </header>
       <h1>HOLA</h1>
       <h2>Por Que DEST</h2>
 
       <p>¿Quieres Comprar?</p>
-      <button id="Comprar">
-        <a href="Comprar.html">Ir a la página de Ventas</a>
-      </button>
+      <a href="Comprar.html"
+        ><button class="btn-comprar">Ir a la página de Comprar</button></a
+      >
     </div>
     <script src="JS/Dest.js"></script>
   </body>
