--- a/Comprar.html
+++ b/Comprar.html
@@ -10,7 +10,7 @@
     <div id="Comprar">
       <header>
         <div>
-          <a href="DESTSOP.html"
+          <a href="index.html"
             ><img
               src="img/DEST CODE logo horizontal.jpeg"
               alt="Principal"
@@ -18,12 +18,12 @@
           /></a>
         </div>
         <nav class="nav-dest">
-          <a href="DESTSOP.html">Principal</a>
+          <a href="index.html">Principal</a>
           <a href="Comprar.html">Comprar</a>
         </nav>
       </header>
       <h1>Nuestros Productos en Venta</h1>
-      <a href="DESTSOP.html"
+      <a href="index.html"
         ><button class="btn-dest">Volver a la página principal</button></a
       >
     </div>
