--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="principal">
       <header>
         <div>
-          <a href="DESTSOP.html"
+          <a href="index.html"
             ><img
               src="img/DEST CODE logo horizontal.jpeg"
               alt="Principal"
@@ -18,7 +18,7 @@
           /></a>
         </div>
         <nav class="nav-dest">
-          <a href="DESTSOP.html">Principal</a>
+          <a href="index.html">Principal</a>
           <a href="Comprar.html">Comprar</a>
         </nav>
       </header>
