--- a/Comprar.html
+++ b/Comprar.html
@@ -22,10 +22,28 @@
           <a href="Comprar.html">Comprar</a>
         </nav>
       </header>
+      <main>
       <h1>Nuestros Productos en Venta</h1>
+      <div>
+        <section>
+          sistema de ventas para tiendas de barrio, minisupermercados,
+          heladerias, restaurantes y cualquier negocio con ventas de todo tipoo
+          de productos personalizable y 
+          adaptable a cualquier tipo de negocio, con un costo de $ 1.000.000
+        </section>
+        
+      </div>
       <a href="index.html"
         ><button class="btn-dest">Volver a la página principal</button></a
       >
+      </main>
+      <footer>
+        <div class="footer-content">
+          <p>© 2025 DEST CODE. Todos los derechos reservados.</p>
+          <p>Contacto: +57 324 5108777</p>
+          <p>Correo:Destcode@gmail.com</p>
+          <p>Dirección: Mercaderes, Cauca</p>        
+      </footer>
     </div>
     <script src="JS/Comprar.js"></script>
   </body>
