--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
           <a href="Comprar.html">Comprar</a>
         </nav>
       </header>
-      <h1>HOLA</h1>
-      <h2>Por Que DEST</h2>
-
-      <p>¿Quieres Comprar?</p>
-      <a href="Comprar.html"
+      <main>
+        <h1>HOLA</h1>
+        <h2>Por Que DEST</h2>
+        <p>¿Quieres Comprar?</p>
+        <a href="Comprar.html"
         ><button class="btn-comprar">Ir a la página de Comprar</button></a
-      >
+        >
+      </main>
+      <footer>
+        <div class="footer-content">
+          <p>© 2025 DEST CODE. Todos los derechos reservados.</p>
+          <p>Contacto: +57 324 5108777</p>
+          <p>Correo:Destcode@gmail.com</p>
+          <p>Dirección: Mercaderes, Cauca</p>        
+      </footer>
     </div>
     <script src="JS/Dest.js"></script>
   </body>
