Dia 3 16de mayo 2025

--- a/Comprar.html
+++ b/Comprar.html
@@ -9,10 +9,10 @@
   <body>
     <div id="Comprar">
       <header>
-        <div>
+        <div class="logo">
           <a href="index.html"
             ><img
-              src="img/DEST CODE logo horizontal.jpeg"
+              src="img/DEST CODE logo.png"
               alt="Principal"
               class="img-logo"
           /></a>
