--- a/Comprar.html
+++ b/Comprar.html
@@ -7,24 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="CSS/Comprar.css">
   </head>
   <body>
     <div id="Comprar">
-      <header>
-        <div class="logo">
-          <a href="index.html"
-            ><img
-              src="img/DEST CODE logo.png"
-              alt="Principal"
-              class="img-logo"
-          /></a>
-        </div>
-        <nav class="nav-dest">
-          <a href="index.html">Principal</a>
-          <a href="Comprar.html">Comprar</a>
-        </nav>
-      </header>
+          <header>
+      <div class="logo">
+        <a href="index.html">
+          <img src="img/DEST CODE logo.png" alt="Principal" class="img-logo"/>
+        </a>
+      </div>
+      <!-- botones de hamburguesa -->
+      <button id="abrir-menu" class="abrir-menu"><i class="bi bi-list"></i></button>
+        <!-- Navegacion principal -->
+      <nav id="nav" class="nav">
+        <button id="cerrar-menu" class="cerrar-menu"><i class="bi bi-x-square"></i></button>
+        <ul class="nav-list">
+          <li><a href="/">Principal</a></li>
+          <li><a href="Comprar.html">Comprar</a></li>
+        </ul>
+      </nav>
+      
+    </header>
       <main>
       <h1>Nuestros Productos en Venta</h1>
       <div>
@@ -44,7 +49,7 @@
         <div class="footer-content">
           <p>© 2025 DEST CODE. Todos los derechos reservados.</p>
           <p>Contacto: +57 324 5108777</p>
-          <p>Correo:Destcode@gmail.com</p>
+          <p>Correo:Destcodegg@gmail.com</p>
           <p>Dirección: Mercaderes, Cauca</p>        
       </footer>
     </div>
