--- a/index.html
+++ b/index.html
@@ -4,30 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEST POST INFORMACION</title>
-    <link rel="stylesheet" href="CSS/DESTSOP.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/DESTSOP.css">
   </head>
   <body>
-    <div id="principal">
-      <header>
-        <div class="logo">
-          <a href="index.html"
-            ><img
-              src="img/DEST CODE logo.png"
-              alt="Principal"
-              class="img-logo"
-          /></a>
-        </div>
-        <nav class="nav-dest">
-          <a href="index.html">Principal</a>
-          <a href="Comprar.html">Comprar</a>
-        </nav>
-      </header>
+    <!-- Encabezado -->
+    <header>
+      <div class="logo">
+        <a href="index.html">
+          <img src="img/DEST CODE logo.png" alt="Principal" class="img-logo"/>
+        </a>
+      </div>
+      <!-- botones de hamburguesa -->
+      <button id="abrir-menu" class="abrir-menu"><i class="bi bi-list"></i></button>
+        <!-- Navegacion principal -->
+      <nav id="nav" class="nav">
+        <button id="cerrar-menu" class="cerrar-menu"><i class="bi bi-x-square"></i></button>
+        <ul class="nav-list">
+          <li><a href="/">Principal</a></li>
+          <li><a href="Comprar.html">Comprar</a></li>
+        </ul>
+      </nav>
+      
+    </header>
       <main>
-        <h1>HOLA</h1>
-        <h2>Por Que DEST</h2>
+        <section>
+        <h1>La Solucion web que necesitas a tu alcance</h1>
+        <h2>¿Por Que DESTCODE?</h2>
+        <p>nos enfocamos y preocupamos en la personalizacion de nuestros sistemas
+          para que se adapten a tus necesidades, y te sientas cómodo utilizándolos.</p>
         <p>¿Quieres Comprar?</p>
         <a href="Comprar.html"
         ><button class="btn-comprar">Ir a la página de Comprar</button></a
@@ -37,10 +45,10 @@
         <div class="footer-content">
           <p>© 2025 DEST CODE. Todos los derechos reservados.</p>
           <p>Contacto: +57 324 5108777</p>
-          <p>Correo:Destcode@gmail.com</p>
-          <p>Dirección: Mercaderes, Cauca</p>        
+          <p>Correo:Destcodegg@gmail.com</p>
+          <p>Dirección: Mercaderes, Cauca</p>
+        </div>
       </footer>
-    </div>
     <script src="JS/Dest.js"></script>
   </body>
 </html>
