--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav id="nav" class="nav">
         <button id="cerrar-menu" class="cerrar-menu"><i class="bi bi-x-square"></i></button>
         <ul class="nav-list">
-          <li><a href="/">Principal</a></li>
+          <li><a href="index.html">Principal</a></li>
           <li><a href="Comprar.html">Comprar</a></li>
         </ul>
       </nav>
