--- a/Comprar.html
+++ b/Comprar.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="CSS/Comprar.css">
   </head>
   <body>
-    <div id="Comprar">
-          <header>
+    <header>
       <div class="logo">
         <a href="index.html">
           <img src="img/DEST CODE logo.png" alt="Principal" class="img-logo"/>
@@ -26,33 +25,33 @@
         <ul class="nav-list">
           <li><a href="index.html">Principal</a></li>
           <li><a href="Comprar.html">Comprar</a></li>
+          <li><a href="Contactanos.html">Contactanos</a></li>
         </ul>
       </nav>
       
     </header>
-      <main>
-      <h1>Nuestros Productos en Venta</h1>
-      <div>
-        <section>
-          sistema de ventas para tiendas de barrio, minisupermercados,
-          heladerias, restaurantes y cualquier negocio con ventas de todo tipoo
-          de productos personalizable y 
-          adaptable a cualquier tipo de negocio, con un costo de $ 1.000.000
-        </section>
-        
-      </div>
+    <main>
+        <article>
+          <h1>Nuestros Productos en Venta</h1>
+            <section>
+              sistema de ventas para tiendas de barrio, minisupermercados,
+              heladerias, restaurantes y cualquier negocio con ventas de todo tipoo
+              de productos personalizable y
+              adaptable a cualquier tipo de negocio, con un costo de $ 1.000.000
+            </section>
+        </article>
       <a href="index.html"
         ><button class="btn-dest">Volver a la página principal</button></a
       >
-      </main>
-      <footer>
+    </main>
+    <footer>
         <div class="footer-content">
           <p>© 2025 DEST CODE. Todos los derechos reservados.</p>
           <p>Contacto: +57 324 5108777</p>
           <p>Correo:Destcodegg@gmail.com</p>
-          <p>Dirección: Mercaderes, Cauca</p>        
-      </footer>
-    </div>
+          <p>Dirección: Mercaderes, Cauca</p>
+        </div>
+    </footer>
     <script src="JS/Comprar.js"></script>
   </body>
 </html>
