--- a/Contactanos.html
+++ b/Contactanos.html
@@ -44,7 +44,7 @@
 
                 <button type="submit"><i class="bi bi-envelope-open-fill"></i> Correo</button>
 
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/Contactanos.html">
+                <input type="hidden" name="_next" value="https://dest15.github.io/DESTSOP/Contactanos.html">
                 <input type="hidden" name="_captcha" value="false">
             </form>
 
@@ -52,27 +52,28 @@
 
                 <input type="text" name="nombre" placeholder="Nombre" required>
 
-                <input type="tel" name="telefono" placeholder="Teléfono" required>
+                <input type="tel" name="telefono" placeholder="Teléfono" pattern="[0-9]{10}" required>
 
                 <textarea name="mensaje" placeholder="¿Qué necesitas?" required></textarea>
 
                 <button type="submit"><i class="bi bi-telephone-fill"></i> Telefono</button>
 
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/Contactanos.html">
+                <input type="hidden" name="_next" value="https://dest15.github.io/DESTSOP/Contactanos.html">
                 <input type="hidden" name="_captcha" value="false">
+                
             </form>
 
             <form action="https://formsubmit.co/destcodegg@gmail.com" method="post" class="whatsapp-form">
 
                 <input type="text" name="nombre" placeholder="Nombre" required>
 
-                <input type="tel" name="whatsapp" placeholder="Whatsapp" required>
+                <input type="tel" name="whatsapp" placeholder="Whatsapp" pattern="[0-9]{10}" required>
 
                 <textarea name="mensaje" placeholder="¿Qué necesitas?" required></textarea>
 
                 <button type="submit"><i class="bi bi-whatsapp"></i> Whatsapp</button>
 
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/Contactanos.html">
+                <input type="hidden" name="_next" value="https://dest15.github.io/DESTSOP/Contactanos.html">
                 <input type="hidden" name="_captcha" value="false">
             </form>
           </div>  
